<resources>
    <string name="app_name">AvisosUFMS</string>

    <string name="email_text">Email</string>
    <string name="senha_text">Senha</string>
    <string name="nome_text">Nome</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_nome">Digite seu nome</string>

    <!-- activity de login -->
    <string name="bemvindo_loginscreen">Bem Vindo</string>
    <string name="facalogin_loginscreen">Faça login em sua conta</string>
    <string name="naopossuiconta_loginscreen">Não possui uma conta? Cadastre-se</string>
    <string name="entrar_loginscreen">Entrar</string>

    <!-- activity de cadastro -->
    <string name="cadastre_signinscreen">Cadastre-se</string>
    <string name="registrar_signinscreen">Registrar</string>
    <string name="bt_secretaria">Secretaria</string>
    <string name="bt_professores">Professor</string>
    <string name="bt_alunos">Aluno</string>

    <!-- main activity -->
    <string name="bemvindo">Olá</string>
    <string name="text_publicacao">Texto da publicação</string>
    <string name="data_hora">Data e hora</string>

    <!-- Tab names -->
    <string name="tab_todos">Todos</string>
    <string name="tab_secretaria">Secretaria</string>
    <string name="tab_professores">Professores</string>
    <string name="tab_alunos">Alunos</string>

    <!-- menu -->
    <string name="menu_buscar">Buscar</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_info">Sobre o app</string>
    <string name="menu_minhas_publicacoes">Minhas publicações</string>

    <!-- adicionar postagem -->
    <string name="adicionar_postagem">Adicionar nova postagem</string>
    <string name="titulo">Título</string>
    <string name="digite_aqui">Digite aqui</string>
    <string name="publicar">Publicar</string>
    <string name="info">\t** As informações como data, horário, nome e tipo do usuário que está postando a publicação são geradas automáticamentes.</string>

    <!-- configuracoes -->
    <string name="alterar_foto">Alterar foto</string>
    <string name="salvar">Salvar alterações</string>
</resources>